@@ -10,7 +10,8 @@ plugins {
 
     id 'me.champeau.jmh' version '0.7.2'
 
-    id 'org.javamodularity.moduleplugin' version '1.8.15'
+    // This is https://github.com/java9-modularity/gradle-modules-plugin/pull/282
+    id 'com.github.koppor.gradle-modules-plugin' version 'jitpack-SNAPSHOT'
 
     id 'org.openjfx.javafxplugin' version '0.1.0'
 
@@ -28,7 +29,7 @@ plugins {
 
     id 'idea'
 
-    id 'org.openrewrite.rewrite' version '6.15.1'
+    id 'org.openrewrite.rewrite' version '6.16.3'
 }
 
 // Enable following for debugging
@@ -79,6 +80,8 @@ application {
         '--add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module',
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref.merged.module',
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref.merged.module',
+        // fix for https://github.com/JabRef/jabref/issues/11426
+        '--add-opens=javafx.controls/javafx.scene.control.skin=org.jabref.merged.module',
 
         // Fix for https://github.com/JabRef/jabref/issues/11225 on linux
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref',
@@ -155,7 +158,7 @@ dependencies {
         exclude group: 'commons-logging'
     }
 
-    def luceneVersion = "9.10.0"
+    def luceneVersion = "9.11.1"
     implementation "org.apache.lucene:lucene-core:$luceneVersion"
     implementation "org.apache.lucene:lucene-queryparser:$luceneVersion"
     implementation "org.apache.lucene:lucene-queries:$luceneVersion"
@@ -165,6 +168,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.11.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
+    implementation 'commons-logging:commons-logging:1.3.2'
     implementation 'com.h2database:h2-mvstore:2.2.224'
 
     // required for reading write-protected PDFs - see https://github.com/JabRef/jabref/pull/942#issuecomment-209252635
@@ -182,16 +186,20 @@ dependencies {
     antlr4 'org.antlr:antlr4:4.13.1'
     implementation 'org.antlr:antlr4-runtime:4.13.1'
 
-    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '6.9.0.202403050737-r'
+    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '6.10.0.202406032230-r'
 
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.17.1'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.17.2'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
 
-    implementation 'com.fasterxml:aalto-xml:1.3.2'
+    implementation 'com.fasterxml:aalto-xml:1.3.3'
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.9'
 
     implementation 'org.postgresql:postgresql:42.7.3'
+
+    // Support unix socket connection types
+    implementation 'com.kohlschutter.junixsocket:junixsocket-core:2.9.1'
+    implementation 'com.kohlschutter.junixsocket:junixsocket-mysql:2.9.1'
 
     implementation ('com.oracle.ojdbc:ojdbc10:19.3.0.0') {
         // causing module issues
@@ -217,10 +225,12 @@ dependencies {
         exclude group: 'org.openjfx'
     }
     implementation 'org.fxmisc.flowless:flowless:0.7.3'
-    implementation 'org.fxmisc.richtext:richtextfx:0.11.2'
-    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.23.0') {
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'
+    implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.32.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
+        exclude group: 'org.apache.commons.validator'
+        exclude group: 'org.apache.commons.commons-logging'
         exclude group: 'org.openjfx'
         exclude group: 'org.apache.logging.log4j'
         exclude group: 'tech.units'
@@ -231,12 +241,14 @@ dependencies {
     implementation 'org.controlsfx:controlsfx:11.2.1'
 
     implementation 'org.jsoup:jsoup:1.17.2'
-    implementation 'com.konghq:unirest-java:3.14.5'
+    implementation 'com.konghq:unirest-java-core:4.4.0'
+    implementation 'com.konghq:unirest-modules-gson:4.4.0'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
 
     implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation "org.tinylog:tinylog-api:2.7.0"
-    implementation "org.tinylog:slf4j-tinylog:2.7.0"
-    implementation "org.tinylog:tinylog-impl:2.7.0"
+    implementation 'org.tinylog:tinylog-api:2.7.0'
+    implementation 'org.tinylog:slf4j-tinylog:2.7.0'
+    implementation 'org.tinylog:tinylog-impl:2.7.0'
 
     // route all requests to java.util.logging to SLF4J (which in turn routes to tinylog)
     implementation 'org.slf4j:jul-to-slf4j:2.0.13'
@@ -273,7 +285,7 @@ dependencies {
     implementation 'org.glassfish.jersey.core:jersey-server:3.1.7'
     // injection framework
     implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.7'
-    implementation 'org.glassfish.hk2:hk2-api:3.1.0'
+    implementation 'org.glassfish.hk2:hk2-api:3.1.1'
     // testImplementation 'org.glassfish.hk2:hk2-testing:3.0.4'
     // implementation 'org.glassfish.hk2:hk2-testing-jersey:3.0.4'
     // testImplementation 'org.glassfish.hk2:hk2-junitrunner:3.0.4'
@@ -298,9 +310,9 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.16.1'
 
-    testImplementation 'io.github.classgraph:classgraph:4.8.172'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
+    testImplementation 'io.github.classgraph:classgraph:4.8.174'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
 
     testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.xmlunit:xmlunit-core:2.10.0'
@@ -316,7 +328,7 @@ dependencies {
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.11.1"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.14.0"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
@@ -485,6 +497,8 @@ run {
                 'javafx.controls/javafx.scene.control.skin' : 'org.controlsfx.controls',
                 'javafx.graphics/javafx.scene' : 'org.controlsfx.controls'
         ]
+
+        createCommandLineArgumentFile = true
     }
 
     if (project.hasProperty('component')){
@@ -528,10 +542,13 @@ testlogger {
     showStackTraces false
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
     reports.html.outputLocation.set(file("${reporting.baseDir}/${name}"))
-    // Enable parallel tests. See https://docs.gradle.org/8.1/userguide/performance.html#execute_tests_in_parallel for details.
-    maxParallelForks = Runtime.runtime.availableProcessors() - 1
+    // Enable parallel tests (on desktop).
+    // See https://docs.gradle.org/8.1/userguide/performance.html#execute_tests_in_parallel for details.
+    if (!providers.environmentVariable("CI").isPresent()) {
+        maxParallelForks = Math.max(Runtime.runtime.availableProcessors() - 1, 1)
+    }
 }
 
 tasks.register('databaseTest', Test) {
@@ -665,7 +682,7 @@ jlink {
     // but it was removed in the newer releases.
     // The pom.xml associated with such a non-modular artifact does not mention that the artifact depends on the removed code
     // (because the artifact was published when this code was still available in the JDK).
-    forceMerge "controlsfx", "bcprov", "jaxb", "istack", "stax", "log4j"
+    forceMerge "controlsfx", "bcprov", "jaxb", "istack", "stax"
 
     // TODO: Remove the following correction to the merged module
     // The module descriptor automatically generated by the plugin for the merged module contained some invalid entries.
@@ -705,12 +722,14 @@ jlink {
         requires 'jakarta.xml.bind'
         requires 'org.apache.commons.lang3'
         requires 'org.apache.commons.text'
+        requires 'org.apache.commons.logging';
         uses 'org.mariadb.jdbc.credential.CredentialPlugin'
         uses 'org.mariadb.jdbc.authentication.AuthenticationPlugin'
         uses 'org.mariadb.jdbc.tls.TlsSocketPlugin'
         uses 'org.mariadb.jdbc.LocalInfileInterceptor'
         uses 'org.eclipse.jgit.transport.SshSessionFactory'
         uses 'org.eclipse.jgit.lib.GpgSigner'
+        uses 'kong.unirest.core.json.JsonEngine';
         provides 'org.mariadb.jdbc.tls.TlsSocketPlugin' with 'org.mariadb.jdbc.internal.protocol.tls.DefaultTlsSocketPlugin'
         provides 'java.sql.Driver' with 'org.postgresql.Driver'
         provides 'org.mariadb.jdbc.authentication.AuthenticationPlugin' with 'org.mariadb.jdbc.internal.com.send.authentication.CachingSha2PasswordPlugin',
@@ -726,6 +745,8 @@ jlink {
                 'org.mariadb.jdbc.credential.system.PropertiesCredentialPlugin'
         provides 'java.security.Provider' with 'org.bouncycastle.jce.provider.BouncyCastleProvider',
                 'org.bouncycastle.pqc.jcajce.provider.BouncyCastlePQCProvider'
+        provides 'kong.unirest.core.json.JsonEngine' with 'kong.unirest.modules.gson.GsonEngine';
+
     }
 
     jpackage {
